--- a/src/App.css
+++ b/src/App.css
@@ -1307,3 +1307,182 @@ footer .container .social_media a:hover {
   width: 100%;
   height: 100%;
 }
+
+.news_articles_section .container .article_title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 125px;
+  padding-bottom: 35px;
+}
+.news_articles_section .container .article_title .section_title {
+  padding: 0;
+}
+@media (min-width: 992px) and (max-width: 1400px) {
+  .news_articles_section .container .business_articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1400px) {
+  .news_articles_section .container .business_articles {
+    display: flex;
+  }
+}
+.news_articles_section .container .business_articles article {
+  padding-right: 0;
+  text-align: center;
+}
+@media (min-width: 1400px) {
+  .news_articles_section .container .business_articles article {
+    text-align: left;
+    padding-right: 30px;
+  }
+}
+.news_articles_section .container .business_articles article img {
+  padding-bottom: 30px;
+}
+.news_articles_section .container .business_articles article img:hover {
+  cursor: pointer;
+}
+.news_articles_section .container .business_articles article h3 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 22px;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
+.news_articles_section .container .business_articles article:nth-child(3) {
+  grid-column: span 2;
+  width: 100%;
+}
+.news_articles_section .container .slider_dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  padding-top: 50px;
+  padding-bottom: 90px;
+}
+.news_articles_section .container .slider_dots a {
+  text-decoration: none;
+  color: black;
+}
+
+.classroom_kimberly .container .howtoclassroom {
+  padding-top: 125px;
+}
+.classroom_kimberly .container .howtoclassroom .kimberly_title {
+  inline-size: 545px;
+}
+.classroom_kimberly .container .howtoclassroom .kimberly_title h2 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+}
+.classroom_kimberly .container .howtoclassroom .title_dates {
+  display: flex;
+  gap: 70px;
+}
+.classroom_kimberly .container .news_article {
+  display: flex;
+  padding-top: 80px;
+}
+.classroom_kimberly .container .news_article .article_kimberly .text_news {
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
+  white-space: pre-line;
+  padding-top: 45px;
+  max-width: 758px;
+}
+.classroom_kimberly .container .news_article .article_kimberly .quote_news {
+  display: flex;
+}
+.classroom_kimberly .container .news_article .article_kimberly .quote_news img {
+  width: 35px;
+  height: 20px;
+}
+.classroom_kimberly .container .news_article .article_kimberly .quote_news p {
+  font-size: 22px;
+  font-weight: 600;
+  padding-left: 25px;
+}
+.classroom_kimberly .container .news_article .article_kimberly .news_button {
+  display: flex;
+  gap: 15px;
+}
+.classroom_kimberly .container .news_article .article_kimberly .news_button .grey_button {
+  background-color: #ccc;
+  color: black;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.classroom_kimberly .container .news_article .article_kimberly .news_button .grey_button:hover {
+  background-color: white;
+  border: 1px solid black;
+  color: black;
+}
+.classroom_kimberly .container .news_article .post_categories {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 30px;
+  padding-left: 140px;
+  padding-bottom: 465px;
+}
+.classroom_kimberly .container .news_article .post_categories form {
+  width: 100%;
+  gap: 15px;
+}
+.classroom_kimberly .container .news_article .post_categories form input {
+  color: #191919;
+  text-decoration: none;
+  padding: 15px 30px;
+  font-weight: 600;
+  font-size: 16px;
+  border-radius: 25px;
+  outline: none;
+  border: 1px solid rgba(25, 25, 25, 0.1019607843);
+  margin-right: 0;
+}
+@media (min-width: 1200px) {
+  .classroom_kimberly .container .news_article .post_categories form input {
+    margin-right: 20px;
+  }
+}
+.classroom_kimberly .container .news_article .post_categories .recent_posts {
+  border: 1px solid grey;
+  padding: 40px;
+}
+.classroom_kimberly .container .news_article .post_categories .recent_posts h3 {
+  font-size: 22px;
+  padding-bottom: 30px;
+}
+.classroom_kimberly .container .news_article .post_categories .recent_posts article h4 {
+  font-size: 16px;
+  font-weight: 700;
+}
+.classroom_kimberly .container .news_article .post_categories .recent_posts p {
+  font-weight: 400;
+  border-bottom: 1px solid grey;
+  padding-bottom: 12px;
+}
+.classroom_kimberly .container .news_article .post_categories .categories {
+  border: 1px solid grey;
+  padding: 40px;
+}
+.classroom_kimberly .container .news_article .post_categories .categories h4 {
+  font-size: 22px;
+  padding-bottom: 30px;
+}
+.classroom_kimberly .container .news_article .post_categories .categories p .pre-count {
+  font-weight: 700;
+}
+.classroom_kimberly .container .news_article .post_categories .categories p .post_count {
+  font-weight: 400;
+}
