--- a/src/app.scss
+++ b/src/app.scss
@@ -1160,13 +1160,13 @@ header {
             grid-template-columns: 1fr 1fr 1fr 1fr;
             align-items: center;
             justify-content: center;
-            text-align: center;
+            text-align: left;
             gap: 50px;
             @media (min-width: 1400px) {
                 display: flex;
                 flex-grow: 1;
                 width: 100%;
-                padding-top: 140px;
+                padding-top: 100px;
                 margin-right: 135px;
             }
             @media (max-width: 768px) {
@@ -1174,12 +1174,13 @@ header {
                 grid-template-columns: 1fr 1fr;
             }
             .summary_end {
-
+                
                 h3 {
-                    margin-bottom: 55px;
+                    
                     font-family: 'DM Sans', sans-serif;
                     font-size: 22px;
                     font-weight: 700;
+                    
                 }
 
                 a {
@@ -1459,25 +1460,13 @@ footer {
         }
         
         .business_articles {
-            
-            @media (min-width: 992px) and (max-width: 1400px) {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-            }
-
-            @media (min-width: 1400px) {
-                display: flex; 
-                
-            }
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 30px;
             article {
-                padding-right:0;
-                text-align: center;
-
-                @media (min-width: 1400px) {
-                    text-align: left; 
-                    padding-right: 30px;
-                    
-                    }
+                padding-right: 0px;
+                text-align: left;
+                max-width: 420px;
                 img {
                     padding-bottom: 30px;
 
@@ -1498,11 +1487,6 @@ footer {
                 p {
 
                 }
-            }
-            article:nth-child(3) {
-                grid-column: span 2;
-                width: 100%;
-                
             }
         }
         
